--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ h2 {
 </head>
 <body>
 <div class="contain">
-<h1 onkeypress="window.location.href = '/beta.html'">Minecraft Multiverse</h1>
+<h1 onkeypress="window.location.href = '/beta.html';">Minecraft Multiverse</h1>
 <p>Toto není finální web, na něm se pracuje!<br>
 Zatím se můžete připojit na náš discord!</p>
 <a href=about:blank><h2><u>Join Discord!</u></h2></a>
