--- a/index.html
+++ b/index.html
@@ -20,10 +20,17 @@ h2 {
     color: #7289DA;
 }
 </style>
+<script>
+    function keyPress (e) {
+    if(e.key === "Escape") {
+        window.location.href = "https://kupeck.github.io/minecraft-multiverse-web/beta.html"
+    }
+}
+</script>
 </head>
 <body>
 <div class="contain">
-<h1 onkeypress="window.location.href = '/beta.html';">Minecraft Multiverse</h1>
+<h1>Minecraft Multiverse</h1>
 <p>Toto není finální web, na něm se pracuje!<br>
 Zatím se můžete připojit na náš discord!</p>
 <a href=about:blank><h2><u>Join Discord!</u></h2></a>
