--- a/beta.html
+++ b/beta.html
@@ -8,7 +8,7 @@
 <title>Minecraft Multiverse</title>
 <link rel="icon" type="image/png" href="favicon.png">
 </head>
-
+<!--Now for the body-->
 
 
 </html>
