--- a/index.html
+++ b/index.html
@@ -22,10 +22,7 @@ h2 {
 .button {
     background-color: #222222;
     color: #d4d4d4;
-}
-.buttonhover {
-    background-color: black;
-    color: white;
+    border-width: 0;
 }
 </style>
 </head>
@@ -36,6 +33,6 @@ h2 {
 Zatím se můžete připojit na náš discord!</p>
 <a href=about:blank><h2><u>Join Discord!</u></h2></a>
 </div>
-<button id="button" class="button" onmouseover="document.getElementById(button).class='buttonhover'" onmouseout="document.getElementById(button).class='button'" onclick="location.href='/beta.html';">Beta!</button>
+<button class="button" onclick="location.href='/beta.html';">Beta!</button>
 </body>
 </html>
