--- a/beta.html
+++ b/beta.html
@@ -9,6 +9,8 @@
 <link rel="icon" type="image/png" href="favicon.png">
 </head>
 <!--Now for the body-->
+<body>
+<h1>test</h1>
 
-
+</body>
 </html>
