--- a/index.html
+++ b/index.html
@@ -33,6 +33,6 @@ h2 {
 Zatím se můžete připojit na náš discord!</p>
 <a href=about:blank><h2><u>Join Discord!</u></h2></a>
 </div>
-<button class="button" onclick="location.href='beta.html';">Beta!</button>
+<button class="button" onclick="location.href='web.html';">Beta!</button>
 </body>
 </html>
