--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@ h2 {
     color: #7289DA;
 }
 .button {
-    background-color: #222222;
-    color: #444444;
+    background-color: #1e1e1e;
+    color: #373737;
     border-width: 0;
 }
 </style>
