--- a/web.html
+++ b/web.html
@@ -3,7 +3,7 @@
 <head>
 <!--importing css & js-->
 <script src="script.js"></script>
-<link rel="stylesheet" href="styles.css">
+<link rel="stylesheet" href="https://kupeck.github.io/minecraft-multiverse-web/styles.css">
 <!--title and stuff-->
 <title>Minecraft Multiverse</title>
 <link rel="icon" type="image/png" href="favicon.png">
