--- a/web.html
+++ b/web.html
@@ -3,6 +3,7 @@
 <head>
 <!--importing css & js-->
 <script src="script.js"></script>
+<link href="https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="styles.css">
 <!--title and stuff-->
 <title>Minecraft Multiverse</title>
