--- a/web.html
+++ b/web.html
@@ -13,7 +13,7 @@
 <body>
     <nav>
         <ul>
-            <li><a href="http://example.com">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="http://example.com">V.I.P.</a></li>
             <li><a href="http://example.com">A-Team</a></li>
             <li><a href="http://example.com">Pravidla</a></li>
