--- a/web.html
+++ b/web.html
@@ -17,8 +17,9 @@
             <li><a href="http://example.com">V.I.P.</a></li>
             <li><a href="http://example.com">A-Team</a></li>
             <li><a href="http://example.com">Pravidla</a></li>
+            <li><a href="http://example.com" class="across">Test</a></li>
         </ul>
     </nav>
-    
+
 </body>
 </html>
