Added icon in the corner

--- a/web.html
+++ b/web.html
@@ -19,6 +19,7 @@
         <li><a href="http://example.com">Pravidla</a></li>
     </ul>
 </nav>
+<img src="favicon.png" id="cornerlogo" height="45px">
 <!--The content for this page-->
 <!--Logo-->
 <svg id="logo" width="982" height="80" viewBox="0 0 982 80" fill="none" xmlns="http://www.w3.org/2000/svg">
