--- a/web.html
+++ b/web.html
@@ -46,7 +46,7 @@
 <svg id="downarrow" width="24" height="16" viewBox="0 0 12 8" fill="none" xmlns="http://www.w3.org/2000/svg">
     <path d="M10.5898 0.943361L11.6464 2L6 7.64645L0.353553 2L1.41019 0.943361L5.82342 5.34697L6 5.52317L6.17658 5.34697L10.5898 0.943361Z" stroke="white" stroke-width="0.4"/>
 </svg>
-    
+<!--Actual Content, not logo-->
 <div class="actualcontent">
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent posuere elit lacus. Sed rhoncus justo sit amet justo interdum, a ultrices lorem placerat. Donec ac enim enim. Aliquam erat volutpat. Nullam hendrerit rhoncus ornare. Donec mollis, purus nec viverra fringilla, mi sem finibus justo, at sagittis massa elit vel turpis. Ut sit amet dolor tincidunt, rhoncus nulla vitae, semper eros. Quisque eget vehicula tellus, eget finibus risus. Vivamus ullamcorper iaculis urna sed fringilla. Etiam mollis pulvinar lacus, eget iaculis lorem pellentesque non. Proin blandit metus turpis, vel congue purus auctor ut. Etiam eget lorem condimentum, dictum orci sed, sodales diam.
         <br><br>
