Added V.I.P. to vip page

--- a/web.html
+++ b/web.html
@@ -14,9 +14,9 @@
 <nav>
     <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="http://example.com">V.I.P.</a></li>
-        <li><a href="http://example.com">A-Team</a></li>
-        <li><a href="http://example.com">Pravidla</a></li>
+        <li><a href="pg_vip.html">V.I.P.</a></li>
+        <li><a href="pg_at.html">A-Team</a></li>
+        <li><a href="pg_pravidla.html">Pravidla</a></li>
     </ul>
 </nav>
 <img src="favicon.png" id="cornerlogo" height="45px">
