--- a/pg_vip.html
+++ b/pg_vip.html
@@ -22,7 +22,7 @@
 <img src="favicon.png" id="cornerlogo" height="45px">
 <!--The content for this page-->
 <!--Logo-->
-<svg id="logoshort" width="244.1" height="82" viewBox="0 0 244.1 82" fill="none" xmlns="http://www.w3.org/2000/svg">
+<svg id="logovip" width="244.1" height="82" viewBox="0 0 244.1 82" fill="none" xmlns="http://www.w3.org/2000/svg">
     <path d="M69.1 8.99998L40.9 79H30.4L2.40002 8.99998H14.7L31.4 51.5C32.2667 53.7666 33.1 56 33.9 58.2C34.7667 60.4 35.5667 62.6333 36.3 64.9C37.0334 62.6333 37.8 60.4 38.6 58.2C39.4 55.9333 40.2 53.7 41 51.5L56.5 8.99998H69.1Z" stroke="white" stroke-width="1.5" mask="url(#path-1-outside-1)"/>
     <path d="M72.9235 80.1C70.5901 80.1 68.8568 79.4333 67.7235 78.1C66.5901 76.7 66.0235 74.8666 66.0235 72.6C66.0235 70.6666 66.5901 68.9333 67.7235 67.4C68.8568 65.8666 70.5901 65.1 72.9235 65.1C75.2568 65.1 76.9901 65.8 78.1235 67.2C79.2568 68.5333 79.8235 70.3333 79.8235 72.6C79.8235 74.4666 79.2568 76.2 78.1235 77.8C76.9901 79.3333 75.2568 80.1 72.9235 80.1Z" stroke="white" stroke-width="1.5" mask="url(#path-1-outside-1)"/>
     <path d="M124.877 79H91.4774V69H102.777V19H91.4774V8.99998H124.877V19H113.577V69H124.877V79Z" stroke="white" stroke-width="1.5" mask="url(#path-1-outside-1)"/>
