--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
 <title>Minecraft Multiverse</title>
 <link rel="icon" type="image/png" href="favicon.png">
+<link href="https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap" rel="stylesheet">
 <style>
 body {
     background-color: #1e1e1e;
     color: #D4d4d4;
 }
 .contain {
-    font-family: 'Segoe UI', Tahoma, Verdana, sans-serif;
+    font-family: 'Lexend Deca', sans-serif;
     position: absolute;
     top: 50%;
     left: 50%;
