--- a/index.html
+++ b/index.html
@@ -22,8 +22,11 @@ h2 {
 }
 .button {
     background-color: #1e1e1e;
-    color: #373737;
+    color: #1e1e1e;
     border-width: 0;
+}
+a {
+    color: #555;
 }
 </style>
 </head>
@@ -31,9 +34,10 @@ h2 {
 <div class="contain">
 <h1>Minecraft Multiverse</h1>
 <p>Toto není finální web, na něm se pracuje!<br>
-Zatím se můžete připojit na náš discord!</p>
+Zatím se můžete připojit na náš discord!<br></p>
 <a href=about:blank><h2><u>Join Discord!</u></h2></a>
 </div>
 <button class="button" onclick="window.location.href='web.html';">Beta!</button>
+<p style="position: absolute; bottom: 2%; left: 50%; transform: translate(-50%); font-family: 'Lexend Deca', sans-serif; font-size: small; color: #444" >Nebo se můžete podívat na tento nedodělaný web <a href=web.html>Zde</a></p>
 </body>
 </html>
