A generic commit message
I actualy forgot what i changed

--- a/pg_at.html
+++ b/pg_at.html
@@ -35,21 +35,31 @@
 </svg>
 <!--Actual Content, not logo-->
 <div class="actualcontent">
-    <div class="atadmin"></div>
-    <h1>Admini</h1><br><br>
-    <h2>kupec</h2>
-    <h2>Wo1ford</h2>
-    <h2>Mrtvolov</h2>
+<table id="admintable">
+<tr>
+    <th>kupec</th>
+    <th>Wo1ford</th>
+    <th>Mrtvolov</th>
+</tr>
+<tr>
+    <th><img src="https://minotar.net/armor/body/0c813ce4f5634317a7fc3249d8ca02f4/128.png"></th>
+</tr>
+
+
+
+
+
+
+
+</table>
+
+
+
 
 
 
 </div>
     
-    
-
-
-
-
 
 </body>
 </html>
