Continued work on the AT page

--- a/pg_at.html
+++ b/pg_at.html
@@ -43,6 +43,8 @@
 </tr>
 <tr>
     <th><img src="https://minotar.net/armor/body/0c813ce4f5634317a7fc3249d8ca02f4/128.png"></th>
+    <th><img src="https://minotar.net/armor/body/c06f89064c8a49119c29ea1dbd1aab82/128.png"></th>
+    <th><img src="https://minotar.net/armor/body/37c5939dc9c542afad4d1b63a5a4b671/128.png"></th>
 </tr>
 
 
