--- a/pg_at.html
+++ b/pg_at.html
@@ -37,14 +37,20 @@
 <div class="actualcontent">
 <table id="admintable">
 <tr>
-    <th>kupec</th>
-    <th>Wo1ford</th>
-    <th>Mrtvolov</th>
+    <th></th>
+    <th><h1>Admini</h1></th>
+    <th></th>
+</tr>
+<tr></tr>
+<tr>
+    <th><h2>kupec</h2></th>
+    <th><h2>Wo1ford</h2></th>
+    <th><h2>Mrtvolov</h2></th>
 </tr>
 <tr>
-    <th><img src="https://minotar.net/armor/body/0c813ce4f5634317a7fc3249d8ca02f4/128.png"></th>
-    <th><img src="https://minotar.net/armor/body/c06f89064c8a49119c29ea1dbd1aab82/128.png"></th>
-    <th><img src="https://minotar.net/armor/body/37c5939dc9c542afad4d1b63a5a4b671/128.png"></th>
+    <th><img src="https://minotar.net/armor/body/0c813ce4f5634317a7fc3249d8ca02f4/256.png"></th>
+    <th><img src="https://minotar.net/armor/body/c06f89064c8a49119c29ea1dbd1aab82/256.png"></th>
+    <th><img src="https://minotar.net/armor/body/37c5939dc9c542afad4d1b63a5a4b671/256.png"></th>
 </tr>
 
 
