Moved animated logos to another css file

--- a/pg_at.html
+++ b/pg_at.html
@@ -3,8 +3,9 @@
 <head>
 <!--importing css & js-->
 <script src="script.js"></script>
-<link href="https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap">
 <link rel="stylesheet" href="styles.css">
+<link rel="stylesheet" href="logos.css">
 <!--title and stuff-->
 <title>Minecraft Multiverse</title>
 <link rel="icon" type="image/png" href="favicon.png">
@@ -43,9 +44,9 @@
 </tr>
 <tr></tr>
 <tr>
-    <th><h2>kupec</h2></th>
-    <th><h2>Wo1ford</h2></th>
-    <th><h2>Mrtvolov</h2></th>
+    <th><h2 class="center">kupec</h2></th>
+    <th><h2 class="center">Wo1ford</h2></th>
+    <th><h2 class="center">Mrtvolov</h2></th>
 </tr>
 <tr>
     <th><img src="https://minotar.net/armor/body/0c813ce4f5634317a7fc3249d8ca02f4/256.png"></th>
