--- a/pg_pravidla.html
+++ b/pg_pravidla.html
@@ -3,8 +3,9 @@
 <head>
 <!--importing css & js-->
 <script src="script.js"></script>
-<link href="https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap">
 <link rel="stylesheet" href="styles.css">
+<link rel="stylesheet" href="logos.css">
 <!--title and stuff-->
 <title>Minecraft Multiverse</title>
 <link rel="icon" type="image/png" href="favicon.png">
