Trying to add a background

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap" rel="stylesheet">
 <style>
 body {
+    background-image: ('bg.png');
     background-color: #1e1e1e;
     color: #D4d4d4;
 }
