Some optimalizations, and the down arrow now works

--- a/pg_at.html
+++ b/pg_at.html
@@ -31,18 +31,20 @@
     <path d="M256.784 19.5V72H246.384V63.9C244.784 66.1 242.417 68.1667 239.284 70.1C236.15 72.0333 232.517 73 228.384 73C223.984 73 219.95 71.8333 216.284 69.5C212.684 67.1667 209.817 63.9333 207.684 59.8C205.55 55.6667 204.484 50.9333 204.484 45.6C204.484 40.2667 205.584 35.5667 207.784 31.5C209.984 27.3667 213.017 24.1667 216.884 21.9C220.75 19.5667 225.15 18.4 230.084 18.4C233.75 18.4 236.95 19.2 239.684 20.8C242.484 22.4 244.717 24.2667 246.384 26.4V19.5H256.784ZM230.784 63.5C233.984 63.5 236.784 62.7333 239.184 61.2C241.584 59.6 243.45 57.4667 244.784 54.8C246.117 52.0667 246.784 49 246.784 45.6C246.784 42.2667 246.117 39.2667 244.784 36.6C243.45 33.9333 241.584 31.8333 239.184 30.3C236.784 28.7 233.984 27.9 230.784 27.9C227.717 27.9 224.984 28.6667 222.584 30.2C220.184 31.7333 218.317 33.8333 216.984 36.5C215.65 39.1667 214.984 42.2 214.984 45.6C214.984 49 215.65 52.0667 216.984 54.8C218.317 57.4667 220.184 59.6 222.584 61.2C224.984 62.7333 227.717 63.5 230.784 63.5Z" stroke="white" stroke-width="1.5" mask="url(#path-1-outside-1)"/>
     <path d="M297.865 18.6C302.198 18.6 305.665 19.6 308.265 21.6C310.865 23.5333 312.732 26.2 313.865 29.6C314.798 27.9333 316.165 26.2667 317.965 24.6C319.765 22.8667 321.865 21.4333 324.265 20.3C326.665 19.1667 329.232 18.6 331.965 18.6C336.498 18.6 340.032 19.6 342.565 21.6C345.098 23.5333 346.865 26.1667 347.865 29.5C348.932 32.7667 349.465 36.4333 349.465 40.5V72H339.065V41.1C339.065 37.2333 338.332 34.1 336.865 31.7C335.398 29.3 332.632 28.1 328.565 28.1C324.698 28.1 321.498 29.3333 318.965 31.8C316.498 34.2 315.265 37.1333 315.265 40.6V72H304.865V40.9C304.865 37.1667 304.065 34.1 302.465 31.7C300.865 29.3 298.232 28.1 294.565 28.1C292.032 28.1 289.765 28.6667 287.765 29.8C285.765 30.9333 284.198 32.4333 283.065 34.3C281.932 36.1 281.365 38.1333 281.365 40.4V72H270.965V19.5H281.365V27.9C282.965 25.5 285.198 23.3667 288.065 21.5C290.998 19.5667 294.265 18.6 297.865 18.6Z" stroke="white" stroke-width="1.5" mask="url(#path-1-outside-1)"/>
 </svg>
+<a href="#downarrow">
 <svg id="downarrow" width="24" height="16" viewBox="0 0 12 8" fill="none" xmlns="http://www.w3.org/2000/svg">
     <path d="M10.5898 0.943361L11.6464 2L6 7.64645L0.353553 2L1.41019 0.943361L5.82342 5.34697L6 5.52317L6.17658 5.34697L10.5898 0.943361Z" stroke="white" stroke-width="0.4"/>
-</svg>
+</svg></a>
 <!--Actual Content, not logo-->
-<div class="actualcontent">
-<table id="admintable">
-<tr>
+<div id="actualcontent">
+<h1 class="admincolor">Administrátoři</h1><br><br>
+<table class="admincolor">
+<!--<tr>
     <th></th><th></th>
     <th><h1>Administrátoři</h1></th>
     <th></th><th></th>
 </tr>
-<tr><th class="e1">spacer</th></tr>
+<tr><th class="e1">spacer</th></tr>-->
 <tr>
     <th><h2 class="center">kupec</h2></th><th class="e1">spacer</th>
     <th><h2 class="center">Wo1ford</h2></th><th class="e1">spacer</th>
@@ -56,13 +58,14 @@
 </tr>
 </table>
 <br><br><br><br><br><br><br>
-<table id="srmodtable">
-<tr>
+<h1 class="srmodcolor">Senior Moderátoři</h1><br><br>
+<table class="srmodcolor">
+<!--<tr>
     <th></th><th></th>
     <th><h1>Senior Moderátoři</h1></th>
     <th></th><th></th>
 </tr>
-<tr><th class="e1">spacer</th></tr>
+<tr><th class="e1">spacer</th></tr>-->
 <tr>
     <th><h2 class="center">kupec</h2></th><th class="e1">spacer</th>
     <th><h2 class="center">Wo1ford</h2></th><th class="e1">spacer</th>
@@ -76,13 +79,14 @@
 </tr>
 </table>
 <br><br><br><br><br><br><br>
-<table id="modtable">
-<tr>
+<h1 class="modcolor">Moderátoři</h1><br><br>
+<table class="modcolor">
+<!--<tr>
     <th></th><th></th>
     <th><h1>Moderátoři</h1></th>
     <th></th><th></th>
 </tr>
-<tr><th class="e1">spacer</th></tr>
+<tr><th class="e1">spacer</th></tr>-->
 <tr>
     <th><h2 class="center">kupec</h2></th><th class="e1">spacer</th>
     <th><h2 class="center">Wo1ford</h2></th><th class="e1">spacer</th>
@@ -96,13 +100,14 @@
 </tr>
 </table>
 <br><br><br><br><br><br><br>
-<table id="jrmodtable">
-<tr>
+<h1 class="jrmodcolor">Junior Moderátoři</h1><br><br>
+<table class="jrmodcolor">
+<!--<tr>
     <th></th><th></th>
     <th><h1>Junior Moderátoři</h1></th>
     <th></th><th></th>
 </tr>
-<tr><th class="e1">spacer</th></tr>
+<tr><th class="e1">spacer</th></tr>-->
 <tr>
     <th><h2 class="center">kupec</h2></th><th class="e1">spacer</th>
     <th><h2 class="center">Wo1ford</h2></th><th class="e1">spacer</th>
@@ -116,13 +121,14 @@
 </tr>
 </table>
 <br><br><br><br><br><br><br>
-<table id="helpertable">
-<tr>
+<h1 class="helpercolor">Helpeři</h1><br><br>
+<table class="helpercolor">
+<!--<tr>
     <th></th><th></th>
     <th><h1>Helpeři</h1></th>
     <th></th><th></th>
 </tr>
-<tr><th class="e1">spacer</th></tr>
+<tr><th class="e1">spacer</th></tr>-->
 <tr>
     <th><h2 class="center">kupec</h2></th><th class="e1">spacer</th>
     <th><h2 class="center">Wo1ford</h2></th><th class="e1">spacer</th>
@@ -135,11 +141,8 @@
     <th><img src="https://minotar.net/armor/body/37c5939dc9c542afad4d1b63a5a4b671/192.png"></th>
 </tr>
 </table>
-
-
+<br><br><br><br><br><br><br>
 
 </div>
-
-
 </body>
 </html>
