--- a/pg_vip.html
+++ b/pg_vip.html
@@ -31,11 +31,12 @@
     <path d="M193.085 8.99998C196.819 8.99998 200.252 9.96665 203.385 11.9C206.519 13.7666 209.019 16.3333 210.885 19.6C212.752 22.8 213.685 26.4333 213.685 30.5C213.685 34.5 212.752 38.1666 210.885 41.5C209.019 44.7666 206.519 47.3666 203.385 49.3C200.252 51.2333 196.819 52.2 193.085 52.2H175.385V79H164.585V8.99998H193.085ZM192.885 41.8C194.685 41.8 196.319 41.3 197.785 40.3C199.252 39.2333 200.419 37.8666 201.285 36.2C202.219 34.4666 202.685 32.5666 202.685 30.5C202.685 27.3666 201.719 24.7333 199.785 22.6C197.852 20.4666 195.552 19.4 192.885 19.4H175.385V41.8H192.885Z" stroke="white" stroke-width="1.5" mask="url(#path-1-outside-1)"/>
     <path d="M219.603 80.1C217.27 80.1 215.536 79.4333 214.403 78.1C213.27 76.7 212.703 74.8666 212.703 72.6C212.703 70.6666 213.27 68.9333 214.403 67.4C215.536 65.8666 217.27 65.1 219.603 65.1C221.936 65.1 223.67 65.8 224.803 67.2C225.936 68.5333 226.503 70.3333 226.503 72.6C226.503 74.4666 225.936 76.2 224.803 77.8C223.67 79.3333 221.936 80.1 219.603 80.1Z" stroke="white" stroke-width="1.5" mask="url(#path-1-outside-1)"/>
 </svg>
+<a href="#downarrow">
 <svg id="downarrow" width="24" height="16" viewBox="0 0 12 8" fill="none" xmlns="http://www.w3.org/2000/svg">
     <path d="M10.5898 0.943361L11.6464 2L6 7.64645L0.353553 2L1.41019 0.943361L5.82342 5.34697L6 5.52317L6.17658 5.34697L10.5898 0.943361Z" stroke="white" stroke-width="0.4"/>
-</svg>
+</svg></a>
 <!--Actual Content, not logo-->
-<div class="actualcontent">
+<div id="actualcontent">
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent posuere elit lacus. Sed rhoncus justo sit amet justo interdum, a ultrices lorem placerat. Donec ac enim enim. Aliquam erat volutpat. Nullam hendrerit rhoncus ornare. Donec mollis, purus nec viverra fringilla, mi sem finibus justo, at sagittis massa elit vel turpis. Ut sit amet dolor tincidunt, rhoncus nulla vitae, semper eros. Quisque eget vehicula tellus, eget finibus risus. Vivamus ullamcorper iaculis urna sed fringilla. Etiam mollis pulvinar lacus, eget iaculis lorem pellentesque non. Proin blandit metus turpis, vel congue purus auctor ut. Etiam eget lorem condimentum, dictum orci sed, sodales diam.
         <br><br>
         Nunc augue lorem, lobortis sit amet suscipit vel, ullamcorper vel orci. Sed fermentum, erat eu semper sodales, justo nisi finibus nisi, eget tincidunt nibh lorem eu odio. Suspendisse et augue laoreet, sollicitudin lacus ut, fringilla velit. In egestas diam vitae est dictum pretium. Morbi ex nisi, varius at posuere id, sagittis sed est. Sed pretium, est non vestibulum volutpat, lectus arcu rutrum nibh, sit amet imperdiet nunc dui a sapien. Duis elementum urna quis urna vestibulum, nec maximus eros scelerisque. Fusce sodales nulla et eros vulputate iaculis. Curabitur consectetur ante sapien, at iaculis tortor vestibulum eget. Mauris vel velit scelerisque, rutrum massa nec, scelerisque ante.
