--- a/pg_at.html
+++ b/pg_at.html
@@ -109,8 +109,8 @@
 </tr>
 <tr><th class="e1">spacer</th></tr>-->
 <tr>
-    <th><h2 class="center">kupec</h2></th><th class="e1">spacer</th>
-    <th><h2 class="center">Wo1ford</h2></th><th class="e1">spacer</th>
+    <!--<th><h2 class="center">kupec</h2></th><th class="e1">spacer</th>-->
+    <th><h2 class="center">Zatím nikdo :(</h2></th><!--<th class="e1">spacer</th>
     <th><h2 class="center">Mrtvolov</h2></th>
 </tr>
 <tr><th class="e1">spacer</th></tr>
@@ -118,7 +118,7 @@
     <th><img src="https://minotar.net/armor/body/0c813ce4f5634317a7fc3249d8ca02f4/192.png"></th><th class="e1">spacer</th>
     <th><img src="https://minotar.net/armor/body/c06f89064c8a49119c29ea1dbd1aab82/192.png"></th><th class="e1">spacer</th>
     <th><img src="https://minotar.net/armor/body/37c5939dc9c542afad4d1b63a5a4b671/192.png"></th>
-</tr>
+</tr>-->
 </table>
 <br><br><br><br><br><br><br>
 <h1 class="helpercolor">Helpeři</h1><br><br>
@@ -130,8 +130,8 @@
 </tr>
 <tr><th class="e1">spacer</th></tr>-->
 <tr>
-    <th><h2 class="center">kupec</h2></th><th class="e1">spacer</th>
-    <th><h2 class="center">Wo1ford</h2></th><th class="e1">spacer</th>
+    <!--<th><h2 class="center">kupec</h2></th><th class="e1">spacer</th>-->
+    <th><h2 class="center">Zatím nikdo :(</h2></th><!--<th class="e1">spacer</th>
     <th><h2 class="center">Mrtvolov</h2></th>
 </tr>
 <tr><th class="e1">spacer</th></tr>
@@ -139,7 +139,7 @@
     <th><img src="https://minotar.net/armor/body/0c813ce4f5634317a7fc3249d8ca02f4/192.png"></th><th class="e1">spacer</th>
     <th><img src="https://minotar.net/armor/body/c06f89064c8a49119c29ea1dbd1aab82/192.png"></th><th class="e1">spacer</th>
     <th><img src="https://minotar.net/armor/body/37c5939dc9c542afad4d1b63a5a4b671/192.png"></th>
-</tr>
+</tr>-->
 </table>
 <br><br><br><br><br><br><br>
 
