--- a/pg_at.html
+++ b/pg_at.html
@@ -85,8 +85,8 @@
 <h1 class="jrmodcolor">Junior Moderátoři</h1><br><br>
 <table class="jrmodcolor">
 <tr>
-    <!--<th><h2 class="center">kupec</h2></th><th class="e1">spacer</th>-->
     <th><h2 class="center">Zatím nikdo :(</h2></th><!--<th class="e1">spacer</th>
+    <th><h2 class="center">Zatím nikdo :(</h2></th><th class="e1">spacer</th>
     <th><h2 class="center">Mrtvolov</h2></th>
 </tr>
 <tr><th class="e1">spacer</th></tr>
@@ -100,8 +100,8 @@
 <h1 class="helpercolor">Helpeři</h1><br><br>
 <table class="helpercolor">
 <tr>
-    <!--<th><h2 class="center">kupec</h2></th><th class="e1">spacer</th>-->
     <th><h2 class="center">Zatím nikdo :(</h2></th><!--<th class="e1">spacer</th>
+    <th><h2 class="center">Zatím nikdo :(</h2></th><th class="e1">spacer</th>
     <th><h2 class="center">Mrtvolov</h2></th>
 </tr>
 <tr><th class="e1">spacer</th></tr>
