--- a/pg_pravidla.html
+++ b/pg_pravidla.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head> <!--REMOVE THIS COMMENT-->
+<head>
 <!--importing css & js-->
 <script src="script.js"></script>
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap">
