Added Rehab_CZ to AT and added placeholder footers

--- a/pg_at.html
+++ b/pg_at.html
@@ -45,13 +45,15 @@
 <tr>
     <th><h2 class="center">kupec</h2></th><th class="e1">spacer</th>
     <th><h2 class="center">Wo1ford</h2></th><th class="e1">spacer</th>
-    <th><h2 class="center">Mrtvolov</h2></th>
+    <th><h2 class="center">Mrtvolov</h2></th><th class="e1">spacer</th>
+    <th><h2 class="center">Rehab_CZ</h2></th>
 </tr>
 <tr><th class="e1">spacer</th></tr>
 <tr>
     <th><img src="https://minotar.net/armor/body/0c813ce4f5634317a7fc3249d8ca02f4/192.png"></th><th class="e1">spacer</th>
     <th><img src="https://minotar.net/armor/body/c06f89064c8a49119c29ea1dbd1aab82/192.png"></th><th class="e1">spacer</th>
-    <th><img src="https://minotar.net/armor/body/37c5939dc9c542afad4d1b63a5a4b671/192.png"></th>
+    <th><img src="https://minotar.net/armor/body/37c5939dc9c542afad4d1b63a5a4b671/192.png"></th><th class="e1">spacer</th>
+    <th><img src="https://minotar.net/armor/body/c1a33dec1a454bdb84f27ae31059508a/192.png"></th>
 </tr>
 </table>
 <br><br><br><br><br><br><br>
@@ -115,6 +117,9 @@
 </tr>-->
 </table>
 <br><br><br><br><br><br><br>
+<br><br>
+<!--Footer below-->
+<h1>Footer</h1>
 
 </div>
 </body>
