--- a/pg_vip.html
+++ b/pg_vip.html
@@ -50,16 +50,11 @@
         <br><br>
         Fusce dapibus congue urna, ut porta nibh faucibus vitae. Aenean ut neque purus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Maecenas dapibus eu massa viverra maximus. Nullam efficitur fringilla rutrum. Nam hendrerit eu libero ut posuere. Aenean ultrices lobortis pretium.
     </p>
-
+<br><br>
+<!--Footer below-->
+<h1>Footer</h1>
 
 
 </div>
-    
-    
-
-
-
-
-
 </body>
 </html>
