Removed few useless comments

--- a/pg_at.html
+++ b/pg_at.html
@@ -67,8 +67,7 @@
 <tr><th class="e1">spacer</th></tr>
 <tr>
     <th><img src="https://minotar.net/armor/body/ff313e7f909e421aa39b0bca23c11c29/192.png"></th><th class="e1">spacer</th>
-    <th><img src="https://minotar.net/armor/body/e7d1b0d5e82d4c1a9d96422ba5caffb6/192.png"></th><!--<th class="e1">spacer</th>
-    <th><img src="https://minotar.net/armor/body/37c5939dc9c542afad4d1b63a5a4b671/192.png"></th>-->
+    <th><img src="https://minotar.net/armor/body/e7d1b0d5e82d4c1a9d96422ba5caffb6/192.png"></th>
 </tr>
 </table>
 <br><br><br><br><br><br><br>
@@ -76,14 +75,12 @@
 <table class="modcolor">
 <tr>
     <th><h2 class="center">_Tessia_</h2></th><!--<th class="e1">spacer</th>
-    <th><h2 class="center">Wo1ford</h2></th><th class="e1">spacer</th>
-    <th><h2 class="center">Mrtvolov</h2></th>-->
+    <th><h2 class="center">Wo1ford</h2></th>-->
 </tr>
 <tr><th class="e1">spacer</th></tr>
 <tr>
     <th><img src="https://minotar.net/armor/body/829a5e7753b548c99c2d2dd3b5cf0012/192.png"></th><!--<th class="e1">spacer</th>
-    <th><img src="https://minotar.net/armor/body/c06f89064c8a49119c29ea1dbd1aab82/192.png"></th><th class="e1">spacer</th>
-    <th><img src="https://minotar.net/armor/body/37c5939dc9c542afad4d1b63a5a4b671/192.png"></th>-->
+    <th><img src="https://minotar.net/armor/body/c06f89064c8a49119c29ea1dbd1aab82/192.png"></th>-->
 </tr>
 </table>
 <br><br><br><br><br><br><br>
