--- a/pg_at.html
+++ b/pg_at.html
@@ -10,7 +10,7 @@
 <link rel="stylesheet" media="(min-width: 800px)" href="desktop.css">
 <link rel="stylesheet" media="(max-width: 800px), handheld and (orientation: portarit)" href="mobile.css">
 <!--title and stuff-->
-<title>Minecraft Multiverse</title>
+<title>Minecraft Multiverse - A-Team</title>
 <link rel="icon" type="image/png" href="favicon.png">
 </head>
 <!--Now for the body-->
