--- a/pg_vip.html
+++ b/pg_vip.html
@@ -3,12 +3,8 @@
 <head>
 <!--importing css & js-->
 <script src="script.js"></script>
-<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap">
 <link rel="stylesheet" href="universal.css">
-<link rel="stylesheet" media="(min-width: 800px)" href="logos.css" />
-<link rel="stylesheet" media="(max-width: 800px), handheld and (orientation: portarit)" href="logos-mobile.css" />
-<link rel="stylesheet" media="(min-width: 800px)" href="desktop.css">
-<link rel="stylesheet" media="(max-width: 800px), handheld and (orientation: portarit)" href="mobile.css">
+<link rel="stylesheet" href="logos.css" />
 <!--title and stuff-->
 <title>Minecraft Multiverse - V.I.P.</title>
 <link rel="icon" type="image/png" href="favicon.png">
