Added google ads code to every page

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <title>Minecraft Multiverse</title>
 <link rel="icon" type="image/png" href="favicon.png">
 <link href="https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap" rel="stylesheet">
+<script data-ad-client="ca-pub-3350340494642978" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <style>
 body {
     background-color: #1e1e1e;
@@ -37,6 +38,11 @@ a {
     opacity: 25%;
     z-index: -1;
 }
+#ads {
+    position: absolute;
+    top: 100%;
+
+}
 </style>
 </head>
 <body>
@@ -49,5 +55,8 @@ Zatím se můžete připojit na náš discord!<br></p>
 <button class="button" onclick="window.location.href='web.html';">Beta!</button>
 <p style="position: absolute; bottom: 2%; left: 50%; transform: translate(-50%); font-family: 'Lexend Deca', sans-serif; font-size: small; color: #444" >Nebo se můžete podívat na tento nedodělaný web <a href=web.html>Zde</a></p>
 <img class="bg" src="bg.png" width="100%" height="100%">
+<div id="ads">
+
+</div>
 </body>
 </html>
