--- a/pg_ads.html
+++ b/pg_ads.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" href="universal.css">
 <link rel="stylesheet" href="logos.css" />
 <!--title and stuff-->
-<title>Minecraft Multiverse</title>
+<title>Minecraft Multiverse - Support us</title>
 <link rel="icon" type="image/png" href="favicon.png">
 <script data-ad-client="ca-pub-3350340494642978" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
