--- a/pg_vip.html
+++ b/pg_vip.html
@@ -8,6 +8,7 @@
 <!--title and stuff-->
 <title>Minecraft Multiverse - V.I.P.</title>
 <link rel="icon" type="image/png" href="favicon.png">
+<script data-ad-client="ca-pub-3350340494642978" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <!--Now for the body-->
 <body>
