Making it a horrible site
Using Ads

--- a/web.html
+++ b/web.html
@@ -50,6 +50,17 @@
 </svg></a>
 <!--Actual Content, not logo-->
 <div id="actualcontent">
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<ins class="adsbygoogle"
+     style="display:block; text-align:center;"
+     data-ad-layout="in-article"
+     data-ad-format="fluid"
+     data-ad-client="ca-pub-3350340494642978"
+     data-ad-slot="8526881229"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent posuere elit lacus. Sed rhoncus justo sit amet justo interdum, a ultrices lorem placerat. Donec ac enim enim. Aliquam erat volutpat. Nullam hendrerit rhoncus ornare. Donec mollis, purus nec viverra fringilla, mi sem finibus justo, at sagittis massa elit vel turpis. Ut sit amet dolor tincidunt, rhoncus nulla vitae, semper eros. Quisque eget vehicula tellus, eget finibus risus. Vivamus ullamcorper iaculis urna sed fringilla. Etiam mollis pulvinar lacus, eget iaculis lorem pellentesque non. Proin blandit metus turpis, vel congue purus auctor ut. Etiam eget lorem condimentum, dictum orci sed, sodales diam.
         <br><br>
         Nunc augue lorem, lobortis sit amet suscipit vel, ullamcorper vel orci. Sed fermentum, erat eu semper sodales, justo nisi finibus nisi, eget tincidunt nibh lorem eu odio. Suspendisse et augue laoreet, sollicitudin lacus ut, fringilla velit. In egestas diam vitae est dictum pretium. Morbi ex nisi, varius at posuere id, sagittis sed est. Sed pretium, est non vestibulum volutpat, lectus arcu rutrum nibh, sit amet imperdiet nunc dui a sapien. Duis elementum urna quis urna vestibulum, nec maximus eros scelerisque. Fusce sodales nulla et eros vulputate iaculis. Curabitur consectetur ante sapien, at iaculis tortor vestibulum eget. Mauris vel velit scelerisque, rutrum massa nec, scelerisque ante.
