--- a/pg_at.html
+++ b/pg_at.html
@@ -37,6 +37,17 @@
 </svg></a>
 <!--Actual Content, not logo-->
 <div id="actualcontent">
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<ins class="adsbygoogle"
+     style="display:block; text-align:center;"
+     data-ad-layout="in-article"
+     data-ad-format="fluid"
+     data-ad-client="ca-pub-3350340494642978"
+     data-ad-slot="8526881229"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
 <h1 class="admincolor">Administrátoři</h1><br><br>
 <table class="admincolor">
 <tr>
