just a line break

--- a/pg_at.html
+++ b/pg_at.html
@@ -46,7 +46,7 @@
      data-ad-slot="8526881229"></ins>
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+</script><br>
 
 <h1 class="admincolor">Administrátoři</h1><br><br>
 <table class="admincolor">
