--- a/pg_ads.html
+++ b/pg_ads.html
@@ -21,6 +21,7 @@
     </ul>
 </nav>
 <img src="favicon.png" id="cornerlogo" height="45px">
+<h1 id="logo" style="font-size: 100px;">Reklamy</h1>
 <!--The content for this page-->
 <div id="actualcontent">
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
