--- a/pg_vip.html
+++ b/pg_vip.html
@@ -3,7 +3,7 @@
 <head>
 <!--importing css & js-->
 <script src="script.js"></script>
-<link rel="stylesheet" href="universal.css">
+<link rel="stylesheet" href="styles.css">
 <link rel="stylesheet" href="logos.css" />
 <!--title and stuff-->
 <title>Minecraft Multiverse - V.I.P.</title>
