Added some rules

--- a/pg_pravidla.html
+++ b/pg_pravidla.html
@@ -48,18 +48,17 @@
      data-ad-slot="8526881229"></ins>
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
-</script><br>
-
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent posuere elit lacus. Sed rhoncus justo sit amet justo interdum, a ultrices lorem placerat. Donec ac enim enim. Aliquam erat volutpat. Nullam hendrerit rhoncus ornare. Donec mollis, purus nec viverra fringilla, mi sem finibus justo, at sagittis massa elit vel turpis. Ut sit amet dolor tincidunt, rhoncus nulla vitae, semper eros. Quisque eget vehicula tellus, eget finibus risus. Vivamus ullamcorper iaculis urna sed fringilla. Etiam mollis pulvinar lacus, eget iaculis lorem pellentesque non. Proin blandit metus turpis, vel congue purus auctor ut. Etiam eget lorem condimentum, dictum orci sed, sodales diam.
-        <br><br>
-        Nunc augue lorem, lobortis sit amet suscipit vel, ullamcorper vel orci. Sed fermentum, erat eu semper sodales, justo nisi finibus nisi, eget tincidunt nibh lorem eu odio. Suspendisse et augue laoreet, sollicitudin lacus ut, fringilla velit. In egestas diam vitae est dictum pretium. Morbi ex nisi, varius at posuere id, sagittis sed est. Sed pretium, est non vestibulum volutpat, lectus arcu rutrum nibh, sit amet imperdiet nunc dui a sapien. Duis elementum urna quis urna vestibulum, nec maximus eros scelerisque. Fusce sodales nulla et eros vulputate iaculis. Curabitur consectetur ante sapien, at iaculis tortor vestibulum eget. Mauris vel velit scelerisque, rutrum massa nec, scelerisque ante.
-        <br><br>
-        Aliquam erat volutpat. Morbi id tortor velit. Sed luctus felis placerat rhoncus suscipit. Quisque nunc turpis, placerat at condimentum at, pulvinar cursus neque. Sed ac tristique massa. Vestibulum a porta erat. Proin cursus rhoncus mi, tristique aliquam sem consequat non. Nullam egestas augue justo, congue pharetra urna porta ac. Cras eget quam at diam pretium posuere.
-        <br><br>
-        Phasellus ac ipsum eleifend, condimentum sem in, egestas metus. Mauris vitae fermentum risus. Vestibulum non iaculis ex. Proin rhoncus arcu non lectus tempus pellentesque. Duis dictum fermentum purus a vulputate. Cras consequat convallis nibh, et venenatis purus mollis vitae. Nam sem velit, malesuada quis sem id, dignissim dictum justo. Fusce eget iaculis quam, quis gravida nisi. Sed vel massa condimentum, aliquam est a, blandit mauris.
-        <br><br>
-        Fusce dapibus congue urna, ut porta nibh faucibus vitae. Aenean ut neque purus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Maecenas dapibus eu massa viverra maximus. Nullam efficitur fringilla rutrum. Nam hendrerit eu libero ut posuere. Aenean ultrices lobortis pretium.
-    </p>
+</script>
+    <br><h1>Chat</h1>
+    <br><h3>1. Žádný spam</h3>
+    <p>Mluvit hodně je v pořádku. Odesílání náhodného odpadu, který nemá kontext a obtěžuje lidi, je spam.</p>
+    <p>Tohle zahrnuje i reklamu v chatu, která také nebude tolerována.</p>
+    <br><h3>2. Žádný nevhodný jazyk</h3>
+    <p>Nebuďe sprostí v chatu, sprosté stavby také nebudou tolerovány.</p>
+    <br><h3>4. Žádné obtěžování v chatu</h3>
+    <p>Nebuďtě otravní, ne na ostatní hráče, A-Team nebo kohokoliv jiného.</p>
+    <br><h3>3. Žádné sdílení osobních údajů</h3>
+    <p>Toto zahrnuje: telefoní číslo, fysická adresa, skutečné jméno, příjmení, </p>
 <br><br>
 <!--Footer below-->
 <h1>Footer</h1>
