--- a/landing.html
+++ b/landing.html
@@ -52,8 +52,8 @@ a {
 Zatím se můžete připojit na náš discord!<br></p>
 <a href=about:blank><h2><u>Join Discord!</u></h2></a>
 </div>
-<button class="button" onclick="window.location.href='web.html';">Beta!</button>
-<p style="position: absolute; bottom: 2%; left: 50%; transform: translate(-50%); font-family: 'Lexend Deca', sans-serif; font-size: small; color: #444" >Nebo se můžete podívat na tento nedodělaný web <a href=web.html>Zde</a></p>
+<button class="button" onclick="window.location.href='index.html';">Beta!</button>
+<p style="position: absolute; bottom: 2%; left: 50%; transform: translate(-50%); font-family: 'Lexend Deca', sans-serif; font-size: small; color: #444" >Nebo se můžete podívat na tento nedodělaný web <a href=index.html>Zde</a></p>
 <img class="bg" src="bg.png" width="100%" height="100%">
 <div id="ads">
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
